analyzer/tests/snapshots/errors__case_59.snap
---
source: analyzer/tests/errors.rs
expression: errstr

---
error: literal out of range for `u256`
  ┌─ tests/fixtures/errors/numeric_capacity_mismatch/u256_neg.fe:3:21
  │
3 │         return u256(-1)
  │                     ^^ does not fit into type `u256`


